<resources>
    <string name="app_name">爱订多多</string>
    <!--登录-->
    <string name="lg_lable">密码登录</string>
    <string name="lg_BindCellPhone_name">绑定手机号</string>
    <string name="lg_BindCellPhone_lable">绑定</string>
    <string name="lg_edhind">请输入手机号码</string>
    <string name="lg_ed_yz">验证码</string>
    <string name="lg_tv_yz">获取验证码</string>
    <string name="lg_tv_xy">《订多多用户协议》</string>
    <!--主页  Main-->
    <string name="home_name">首页</string>
    <string name="home_Apartment">户型</string>
    <string name="home_Message">消息</string>
    <string name="home_mine">我的</string>
    <string name="SelectRoomNumber_name">选择房号</string>
    <string name="Act_HousingLoanCalculation_name">房贷计算</string>
    <string name="CertificateQualification_name">证照资质</string>
    <string name="QualificationDocuments_name"></string>
    <string name="CustomerServiceDetails_name">客户详情</string>
    <string name="Act_ReservationHouseDetalie_name">订房订单详情</string>
    <string name="UnitDetails">户型详情</string>
    <string name="MakeMoney_name">赚钱</string>
    <string name="Home_More_name">热门列表</string>
    <string name="Act_Instructionsforparticipatinginthemission_name">参团须知</string>
    <string name="UserEvaluate_name">评价邀请人和评价置业顾问</string>
    <string name="home_HouseInspection">首页=立即报名=户型详情=看房团报名</string>
    <string name="home_HouseInspection_name">看房团报名</string>
    <string name="home_Explain_name">看房团活动说明</string>
    <string name="preferentialinformation_name">优惠信息</string>
    <string name="home_UnitImageDetails_name">首页=立即报名=户型详情==图片查看</string>
    <string name="home_OnlineBooking_name">在线预定</string>
    <string name="Message_name">消息</string>
    <string name="home_OnlineBooking_app"> 主界面户型=>户型详情=>在线预定</string>
    <string name="home_CustomerService_name">客服</string>
    <string name="home_CustomerService_app">主界面户型=>户型详情=>客服</string>
    <string name="PaymentOrder_name">支付订单</string>
    <string name="Cashier_name">收银台</string>
    <string name="Bill_name">账单</string>
    <string name="myWallet_name">我的钱包</string>
    <string name="Cash_WithdrawalSuccess_name">提现成功</string>
    <string name="Cash_Withdrawal_name">提现</string>
    <string name="Act_BookingProperty_name">爱订房产</string>
    <string name="More_name">更多</string>
    <!--我的  mine-->
    <string name="min_order">订单</string>
    <string name="min_Historical_record">历史记录</string>
    <string name="min_Member">会员</string>
    <string name="min_Coupon">优惠券</string>
    <string name="min_user_agreement">用户协议</string>
    <string name="min_certificate_qualification">证照资质</string>
    <string name="min_contact_customer_service">联系客服</string>
    <string name="min_problem_feedback">问题反馈</string>
    <string name="min_about_us">关于我们</string>
    <string name="NickName_name">昵称</string>
    <string name="ModifyCellPhone_name">修改手机号</string>
    <string name="RechargePassword_name">重置密码</string>
    <string name="Bangding_name">第三方账号绑定</string>
    <string name="Invitation_name">绑定邀请人</string>
    <string name="PersonalInformation_name">修改个人信息</string>
    <string name="min_check_update">检查更新</string>
    <string name="min_clear_cache">清理缓存</string>
    <string name="mine_Sign_out">退出</string>
    <string name="min_min_Historical_record_name">浏览记录</string>
    <string name="min_Order_name">我的订单</string>
    <string name="min_Coupon_name">优惠券</string>
    <string name="min_ClipCoupons_name">使用优惠券</string>
    <string name="Ap_UnitDetails"> 主界面户型=》户型详情</string>
    <string name="OrderDetails_name">订单详情</string>
    <string name="ShoppingCenter_name">爱订商城</string>
    <string name="CommodityDetails_name">商品详情</string>
    <string name="MemberCenter_name">会员中心</string>
    <string name="MyOrder_name">我的订单</string>
    <string name="Accumulation_name">积分商城</string>
    <string name="ExchangeRecords_name">兑换记录</string>
    <string name="MyIncome_name">我的收益</string>
    <string name="GiftDetails_name">积分礼品详情</string>
    <string name="IntegralOrder_name">我的=》积分=>积分记录=》订单详情</string>
    <string name="ReceivingAddress_name">我的=收货地址</string>
    <string name="ConfirmationOfOrder_name">确认订单</string>
    <string name="ChoseCoupon_name">使用优惠券</string>
    <string name="MerchandiseOrder_name">商城订单</string>
    <string name="MerchandiseOrderDetails_name">商城订单详情</string>
    <string name="LogisticsInformation_name">物流信息</string>
</resources>
