<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/dip_45"
        android:layout_marginTop="@dimen/dip_20">

        <ImageView
            android:id="@+id/BindCellPhone_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:padding="@dimen/dip_10"
            android:src="@mipmap/icon_blck_back" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:text="@string/lg_BindCellPhone_name"
            android:textColor="@color/min_color"
            android:textSize="@dimen/fond_21sp" />
    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white"
        android:orientation="vertical">

        <TextView
            android:layout_width="@dimen/dip_170"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/dip_10"
            android:layout_marginTop="@dimen/dip_35"
            android:padding="@dimen/dip_10"
            android:text="您的微信账号通过验证请绑定手机号"
            android:textColor="@color/min_color"
            android:textSize="@dimen/fond_16sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/dip_47"
            android:layout_marginLeft="@dimen/dip_20"
            android:layout_marginTop="@dimen/dip_30"
            android:layout_marginRight="@dimen/dip_20">
            <com.example.d_housepropertyproject.view.EditTextWithDel
                android:id="@+id/BindCellPhone_phone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom"
                android:background="@null"
                android:hint="@string/lg_edhind"
                android:inputType="number"
                android:maxLength="11"
                android:paddingTop="@dimen/dip_5"
                android:paddingBottom="@dimen/dip_5"
                android:textColorHint="@color/login_input_hind"
                android:textSize="@dimen/fond_16sp" />
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/dip_0.1"
            android:layout_marginLeft="@dimen/dip_20"
            android:layout_marginRight="@dimen/dip_20"
            android:background="@color/login_liner" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/dip_47"
            android:layout_marginLeft="@dimen/dip_20"
            android:layout_marginTop="@dimen/dip_10"
            android:layout_marginRight="@dimen/dip_20"
            android:orientation="horizontal">

            <com.example.d_housepropertyproject.view.EditTextWithDel
                android:id="@+id/BindCellPhone_yzm"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginRight="@dimen/dip_10"
                android:layout_gravity="bottom"
                android:layout_weight="1"
                android:background="@null"
                android:hint="@string/lg_ed_yz"
                android:inputType="number"
                android:maxLength="6"
                android:paddingTop="@dimen/dip_5"
                android:paddingBottom="@dimen/dip_5"
                android:textColorHint="@color/login_input_hind"
                android:textSize="@dimen/fond_16sp" />

            <com.example.d_housepropertyproject.view.MyTimerText
                android:id="@+id/BindCellPhone_Timer"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom"
                android:paddingBottom="@dimen/dip_5"
                android:text="@string/lg_tv_yz"
                android:textColor="@color/login_send_color"
                android:textSize="@dimen/fond_16sp" />
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/dip_0.1"
            android:layout_marginLeft="@dimen/dip_20"
            android:layout_marginRight="@dimen/dip_20"
            android:background="@color/login_liner" />

        <TextView
            android:id="@+id/BindCellPhone_Submission"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dip_40"
            android:layout_marginLeft="@dimen/dip_20"
            android:layout_marginTop="@dimen/dip_50"
            android:layout_marginRight="@dimen/dip_20"
            android:background="@drawable/lg_login_false"
            android:gravity="center"
            android:text="@string/lg_BindCellPhone_lable"
            android:textColor="@color/white"
            android:textSize="@dimen/fond_18sp"
            android:textStyle="bold" />
    </LinearLayout>
</LinearLayout>
