<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical">

    <FrameLayout
        android:id="@+id/myFrame"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="@dimen/dip_50"
        android:layout_weight="1"
        android:background="@color/white" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/dip_50"
        android:layout_alignParentBottom="true"
        android:background="@drawable/main_boder_top"
        android:gravity="center"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/main_tab_home"
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:drawableTop="@drawable/main_tab_home"
            android:drawablePadding="@dimen/dip_3"
            android:gravity="center"
            android:text="@string/home_name"
            android:textColor="@drawable/main_fond_selecte"
            android:textSize="@dimen/fond_12sp" />
        <RelativeLayout
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_weight="1">
            <TextView
                android:id="@+id/main_tab_Message"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableTop="@drawable/main_tab_message"
                android:drawablePadding="@dimen/dip_3"
                android:gravity="center"
                android:text="@string/home_Message"
                android:textColor="@drawable/main_fond_selecte"
                android:textSize="@dimen/fond_12sp" />
            <TextView
                android:id="@+id/message_status"
                android:layout_alignParentRight="true"
                android:visibility="gone"
                android:layout_marginRight="@dimen/dip_40"
                android:layout_width="@dimen/dip_5"
                android:layout_height="@dimen/dip_5"
                android:background="@drawable/message_yuandain"
                android:gravity="center"
                android:textColor="@color/white"
                android:textSize="@dimen/fond_9sp" />
        </RelativeLayout>
        <TextView
            android:id="@+id/main_tab_mine"
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:drawableTop="@drawable/main_tabmine"
            android:drawablePadding="@dimen/dip_3"
            android:gravity="center"
            android:text="@string/home_mine"
            android:textColor="@drawable/main_fond_selecte"
            android:textSize="@dimen/fond_12sp" />
    </LinearLayout>

</RelativeLayout>
