<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tabTv_registerLogin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/dip_10"
                android:layout_marginTop="@dimen/dip_80"
                android:text="注册登录"
                android:textColor="@color/login_blck"
                android:textSize="@dimen/fond_39sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tabTv_pwdLogin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/dip_20"
                android:layout_marginTop="@dimen/dip_80"
                android:text="@string/lg_lable"
                android:textColor="#80000000"
                android:textSize="@dimen/fond_14sp"
                android:textStyle="bold" />
        </LinearLayout>

        <TextView
            android:id="@+id/login_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/dip_10"
            android:text="手机号首次登录即自动注册"
            android:textColor="#80000000"
            android:textSize="@dimen/fond_12sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/dip_47"
            android:layout_marginLeft="@dimen/dip_20"
            android:layout_marginTop="@dimen/dip_40"
            android:layout_marginRight="@dimen/dip_20">

            <com.example.d_housepropertyproject.view.ClearEditText
                android:id="@+id/lg_phone"
                android:text="18113401543"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom"
                android:background="@null"
                android:hint="@string/lg_edhind"
                android:inputType="number"
                android:maxLength="11"
                android:paddingTop="@dimen/dip_5"
                android:paddingBottom="@dimen/dip_5"
                android:textColorHint="@color/login_input_hind"
                android:textSize="@dimen/fond_16sp" />
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/dip_0.1"
            android:layout_marginLeft="@dimen/dip_20"
            android:layout_marginRight="@dimen/dip_20"
            android:background="@color/login_liner" />

        <LinearLayout
            android:id="@+id/login_code"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dip_47"
            android:layout_marginLeft="@dimen/dip_20"
            android:layout_marginTop="@dimen/dip_10"
            android:layout_marginRight="@dimen/dip_20"
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:orientation="horizontal">

            <com.example.d_housepropertyproject.view.EditTextWithDel
                android:id="@+id/lg_yzm"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom"
                android:layout_weight="1"
                android:layout_marginRight="@dimen/dip_10"
                android:background="@null"
                android:hint="@string/lg_ed_yz"
                android:inputType="number"
                android:maxLength="6"
                android:paddingTop="@dimen/dip_5"
                android:paddingBottom="@dimen/dip_5"
                android:textColorHint="@color/login_input_hind"
                android:textSize="@dimen/fond_16sp" />

            <com.example.d_housepropertyproject.view.MyTimerText
                android:id="@+id/lg_Timer"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom"
                android:paddingBottom="@dimen/dip_5"
                android:text="@string/lg_tv_yz"
                android:textColor="@color/login_send_color"
                android:textSize="@dimen/fond_16sp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/login_pwd"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dip_47"
            android:layout_marginLeft="@dimen/dip_20"
            android:layout_marginTop="@dimen/dip_10"
            android:layout_marginRight="@dimen/dip_20"
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:orientation="horizontal"
            android:visibility="gone">

            <com.example.d_housepropertyproject.view.EditTextWithDel
                android:id="@+id/lg_pwd"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom"
                android:text="wwwwwww"
                android:layout_weight="1"
                android:background="@null"
                android:hint="请输入密码"
                android:inputType="textPassword"
                android:paddingTop="@dimen/dip_5"
                android:paddingBottom="@dimen/dip_5"
                android:textColorHint="@color/login_input_hind"
                android:textSize="@dimen/fond_16sp" />

            <TextView
                android:id="@+id/login_wangjimima"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom"
                android:paddingBottom="@dimen/dip_5"
                android:text="忘记密码"
                android:textColor="@color/login_send_color"
                android:textSize="@dimen/fond_16sp" />
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/dip_0.1"
            android:layout_marginLeft="@dimen/dip_20"
            android:layout_marginRight="@dimen/dip_20"
            android:background="@color/login_liner" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dip_20"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/login_userGreen"
                android:layout_width="@dimen/dip_10"
                android:layout_height="@dimen/dip_10"
                android:layout_gravity="center"
                android:layout_marginLeft="@dimen/dip_20"
                android:layout_marginRight="@dimen/dip_5"
                android:src="@drawable/login_tab" />

            <TextView
                android:id="@+id/login_userGreen1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="注册/登录即代表同意"
                android:textColor="#858585"
                android:textSize="@dimen/fond_12sp" />

            <TextView
                android:id="@+id/lg_UserAgreement"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginRight="@dimen/dip_20"
                android:text="@string/lg_tv_xy"
                android:textColor="#5C96FF"
                android:textSize="@dimen/fond_12sp" />
        </LinearLayout>

        <TextView
            android:id="@+id/lg_Submission"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dip_40"
            android:layout_marginLeft="@dimen/dip_20"
            android:layout_marginTop="@dimen/dip_50"
            android:layout_marginRight="@dimen/dip_20"
            android:background="@drawable/lg_login_false"
            android:gravity="center"
            android:text="登录"
            android:textColor="@color/white"
            android:textSize="@dimen/fond_18sp"
            android:textStyle="bold" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="@dimen/dip_80"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/login_wx"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@mipmap/icon_wx" />

        <ImageView
            android:id="@+id/login_qq"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/dip_30"
            android:src="@mipmap/icon_qq"
            android:visibility="gone" />
    </LinearLayout>

    <ImageView
        android:id="@+id/Login_back"
        android:layout_marginTop="@dimen/dip_20"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingLeft="@dimen/dip_10"
        android:paddingTop="@dimen/dip_10"
        android:paddingRight="@dimen/dip_20"
        android:paddingBottom="@dimen/dip_10"
        android:src="@mipmap/icon_blck_back" />
</RelativeLayout>